<resources>
    <string name="app_name">VediCorp</string>

    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_key">AIzaSyDdEQHk7SU3A1Q1BH1roJvusIvUkFq5FvQ</string>
    <string name="menu_cliente">Ventas</string>
    <string name="menu_pedido">Pedido</string>
    <string name="menu_producto">Productos</string>
    <string name="menu_usuario">Usuario</string>
    <string name="label_usuario">Usuario</string>
    <string name="label_password">Clave</string>
    <string name="label_start_session">Ingresar</string>
    <string name="title_activity_detalle_compras">DetalleComprasActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ubicacion">Ubicación</string>
    <string name="ruta">Ruta</string>
    <string name="agregar">Agregar</string>
    <string name="label_editarUser"><u>Editar Perfil Usuario</u></string>


</resources>