<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearParte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg"
            android:backgroundTint="@color/toolbarcolor"
            android:foregroundTint="@color/toolbarcolor"
            android:tint="@color/toolbarcolor"
            app:srcCompat="@drawable/ic_logo">

            <ImageView
                android:id="@+id/img"
                android:layout_width="177dp"
                android:layout_height="165dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_logo" />

        </FrameLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/linearParte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20.5dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:gravity="center_horizontal"
        android:text="INICIAR SESIÓN"
        android:textColor="@color/blue"
        android:textSize="23.3sp" />


    <LinearLayout
        android:id="@+id/linearParte3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_usuario"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte3"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIniciarSesion"
            android:layout_width="150dp"
            android:layout_marginLeft="30dp"
            android:textAllCaps="false"
            android:layout_height="39dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/label_start_session"
            android:textColor="@color/purple_500"
            app:backgroundTint="@null"
            android:background="@drawable/borde_redondo"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:icon="@drawable/ic_login"
            app:iconTint="@color/purple_500"
            app:iconGravity="textEnd"/>
    </LinearLayout>
</RelativeLayout>